# detection-as-code

./: .gitignore  README.md  models.yaml  pyproject.toml  run.sh
.github/workflows/: ci.yml
data/: .gitignore  fetch.sh
data/ground_truth/: apt3_attack_steps.json
data/runs/: _rolesplit_sweep_summary.txt  baseline_solo12b__apt3_corpus.json  baseline_solo12b__scorecard.txt
docs/: lessons-learned.md  model-comparison.md  results.md  sqlwriter-floor.md  triage-methodology.md
rules/: discovery_net_recon.yml  discovery_network_config.yml  discovery_whoami_recon.yml  execution_vbscript_cmd.yml  execution_wscript_vbs.yml  lateral_movement_remote_service.yml  powershell_encoded_command.yml  powershell_suspicious_launch_flags.yml
scripts/: cost_compare_1min.sh  cost_llama4.sh  cost_per_token.py  needle_probe.py  probe_1min_response.py  retest_trim.sh  role_token_split.py  rolesplit_sweep.sh  sqlwriter_isolation.py  sweep_3alert.sh  validate_26b.sh  validate_fixes.sh
src/: bench.py  build_ground_truth.py  detect.py  ground_truth.py  metrics.py  schema.py  triage.py  triage_fallback.py
src/backends/: onemin.py
tests/: test_detect.py  test_metrics.py  test_rules.py  test_smoke.py  test_triage.py
