[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detection-as-code"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "rich>=13.7.0",
    "pysigma>=0.10.10",
    "pysigma-backend-sqlite>=0.1.1",
    "pysigma-pipeline-windows>=1.1.1",
    "pysigma-pipeline-sysmon>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
